# hybrid-recommender-engine

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dashboard.html  pyproject.toml  render.yaml  requirements.txt  train.py
.github/workflows/: ci.yml
deploy/: main.py  requirements.txt
src/: __init__.py  data_processor.py  settings.py
src/api/: server.py
src/models/: als_engine.py  basket_rules.py  blend_recommender.py
tests/: test_blend_recommender.py  test_data_processor.py  test_settings.py
